<resources>
    <string name="app_name">ProyectoFinCiclo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notas">Notas</string>
    <string name="audios">Audios</string>
    <string name="calendario">Calendario</string>
    <string name="ajustes">Ajustes</string>
    <string name="configuracion">Configuracion</string>
    <string name="cuenta">Cuenta</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">close Drawer</string>
    <string name="empty" />
</resources>